--- a/main.ui
+++ b/main.ui
@@ -225,7 +225,7 @@
           <object class="GtkImage">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="stock">gtk-missing-image</property>
+            <property name="stock">gtk-ok</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -490,10 +490,9 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkProgressBar">
+                  <object class="GtkProgressBar" id="progress">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="fraction">0.5</property>
                     <property name="show-text">True</property>
                   </object>
                   <packing>
