--- a/main.ui
+++ b/main.ui
@@ -209,6 +209,39 @@
       </object>
     </child>
   </object>
+  <object class="GtkWindow">
+    <property name="can-focus">False</property>
+    <child>
+      <object class="GtkBox">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <child>
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="label" translatable="yes">label</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkEntry">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="pack-type">end</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="upper">100</property>
     <property name="step-increment">1</property>
@@ -251,7 +284,7 @@
             <property name="can-focus">True</property>
             <child>
               <!-- n-columns=2 n-rows=9 -->
-              <object class="GtkGrid">
+              <object class="GtkGrid" id="video_config">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <child>
@@ -281,33 +314,10 @@
                   <object class="GtkLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">preset</property>
+                    <property name="label" translatable="yes">color space</property>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
-                    <property name="top-attach">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkComboBoxText" id="preset_combo">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="active">5</property>
-                    <items>
-                      <item translatable="yes">ultrafast</item>
-                      <item translatable="yes">superfast</item>
-                      <item translatable="yes">veryfast</item>
-                      <item translatable="yes">faster</item>
-                      <item translatable="yes">fast</item>
-                      <item translatable="yes">medium</item>
-                      <item translatable="yes">slow</item>
-                      <item translatable="yes">slower</item>
-                      <item translatable="yes">veryslow</item>
-                      <item translatable="yes">placebo</item>
-                    </items>
-                  </object>
-                  <packing>
-                    <property name="left-attach">1</property>
                     <property name="top-attach">1</property>
                   </packing>
                 </child>
@@ -319,14 +329,14 @@
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
-                    <property name="top-attach">2</property>
+                    <property name="top-attach">1</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">color space</property>
+                    <property name="label" translatable="yes">fps</property>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -342,19 +352,14 @@
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
-                    <property name="top-attach">3</property>
+                    <property name="top-attach">2</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel">
-                    <property name="visible">True</property>
-                    <property name="can-focus">False</property>
-                    <property name="label" translatable="yes">fps</property>
-                  </object>
-                  <packing>
-                    <property name="left-attach">0</property>
-                    <property name="top-attach">3</property>
-                  </packing>
+                  <placeholder/>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
                 <child>
                   <placeholder/>
@@ -479,10 +484,24 @@
               </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkListBox" id="test_list">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+              </object>
+              <packing>
+                <property name="position">2</property>
+              </packing>
             </child>
             <child type="tab">
-              <placeholder/>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="label" translatable="yes">test</property>
+              </object>
+              <packing>
+                <property name="position">2</property>
+                <property name="tab-fill">False</property>
+              </packing>
             </child>
           </object>
           <packing>
